feat(p0e): real Fabric testbed, determinism harness, first spark baseline
Testbed (J:/mc/Cava/testbed, gitignored, re-creatable from scripts):
  Fabric Loader 0.19.5 + Installer 1.1.2 + MC 1.20.4, JDK 21,
  java -Xms2G -Xmx4G --enable-preview --enable-native-access=ALL-UNNAMED -jar fabric-server-....jar nogui
  -> boots clean, Done (3.157s), 147 mods loaded with the 33-jar keep set (wave 4 smoke test).

49-jar pack staged in three tiers (33 keep / 8 must-off / 4 suggested-off / 4 client-env).
Scripts: setup-testbed / copy-mods / run-scenario / start-server / rcon / worldhash / diff-chunks /
         make-det-datapack / make-load-datapack / yarnmap / sparkprofile-* / jfr-buckets.

Measured findings (all in docs/CAVA-baseline.md):
  * the client save '新的世界' IS usable as a server world (region chunk counts match 1:1)
  * determinism FAILS: 3 runs give identical tick counts (203/404/1005) but 23/2025 region
    chunks and 24/39 entity chunks differ; two fresh same-seed generations differ in 118/2025
  * /tick sprint N only returns to frozen when the game was frozen -> datapack tick freeze at load
  * Carpet/TIS HUD loggers do not write files on a headless server; vanilla /debug writes none either
  * spark .sparkprofile is raw protobuf and IS decodable (schema read with javap);
    block ticks = 36.3% of world tick (loaded) / 21.6% (empty), SpawnHelper = 21.2%
  * spark's built-in java sampler (no async-profiler on windows11/amd64) cannot resolve entity or
    pathfinding frames -> those two buckets are NOT measured (stated as a blocker, no invented numbers)

New tools are re-runnable; no jars or testbed artifacts are committed.